Bug 1701829 - Make sure we do fast fallback when h2 connection is ready, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D110401